# whendoes-cli

./: .env.example  .gitignore  ACCESSIBILITY_TOOLS.md  DOCUMENTATION.md  HUMAN_LIKE_BEHAVIOR.md  HUMAN_LIKE_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  README.md  SMART_UI_GUIDE.md  pyproject.toml  requirements.txt  test_fix.py
examples/: advanced_learning.py  basic_window_control.py  file_operations.py  human_like_chrome_automation.py  multi_provider.py  pattern_learning.py  process_management.py  smart_ui_agent_demo.py  smart_ui_automation.py
lab/: facebook_post.txt
src/whendoes/: __init__.py  __main__.py
src/whendoes/agent/: __init__.py  agent.py  context.py  human_like_behavior.py  smart_ui_agent.py  smart_ui_agent_new.py  tool_registry.py
src/whendoes/cli/: __init__.py  main.py  repl.py  setup.py
src/whendoes/config/: __init__.py
src/whendoes/llm/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  groq_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
src/whendoes/ui_automation/: __init__.py  actions.py  extractor.py
src/whendoes/windows_api/: __init__.py  accessibility_tools.py  app_finder.py  app_launcher.py  file_operations.py  process_manager.py  system_info.py  ui_automation.py  window_manager.py
tests/: __init__.py  test_agent.py  test_config.py  test_integration.py  test_llm_providers.py  test_ui_automation.py  test_windows_api.py
